--- a/Backend/Cargo.toml
+++ b/Backend/Cargo.toml
@@ -9,3 +9,5 @@ tokio = { version = "1", features = ["full"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 chrono = { version = "0.4", features = ["serde"] }
+sea-orm = { version = "1.1", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros"] }
+dotenv = "0.15"
