--- a/Backend/Cargo.toml
+++ b/Backend/Cargo.toml
@@ -10,4 +10,5 @@ serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 chrono = { version = "0.4", features = ["serde"] }
 sea-orm = { version = "1.1", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros"] }
+sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres"] }
 dotenv = "0.15"
