--- a/Backend/Cargo.toml
+++ b/Backend/Cargo.toml
@@ -12,3 +12,4 @@ chrono = { version = "0.4", features = ["serde"] }
 sea-orm = { version = "1.1", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros"] }
 sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres"] }
 dotenv = "0.15"
+async-trait = "0.1"
