--- a/Backend/Cargo.toml
+++ b/Backend/Cargo.toml
@@ -13,3 +13,4 @@ sea-orm = { version = "1.1", features = ["sqlx-postgres", "runtime-tokio-rustls"
 sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres"] }
 dotenv = "0.15"
 async-trait = "0.1"
+polars = { version = "0.44", features = ["lazy", "dtype-full", "diff", "abs", "rolling_window", "cum_agg"] }
