feat: Implement complete authentication system with JWT
- Add JWT-based authentication with pbkdf2 password hashing (Werkzeug compatible)
- Create AuthUser extractor middleware for route protection
- Implement authentication routes: register, login, me, change-password
- Protect all routes except register and login (stocks, admin, auth/me, auth/change-password)
- Add password hashing utilities (supports both hex and base64 formats for Python compatibility)
- Create user, wallet, trade, and trades_fermes SeaORM models
- Add JWT token generation and verification utilities
- Update routes documentation in routes/mod.rs

Files added:
- src/middleware/auth.rs (AuthUser extractor)
- src/middleware/mod.rs
- src/utils/password.rs (pbkdf2 hashing)
- src/utils/jwt.rs (JWT generation/verification)
- src/models/users.rs
- src/models/wallet.rs
- src/models/trade.rs
- src/models/trades_fermes.rs

Files modified:
- src/routes/auth.rs (simplified with AuthUser)
- src/routes/stocks.rs (protected with AuthUser)
- src/routes/admin.rs (protected with AuthUser)
- src/routes/mod.rs (updated documentation)
- src/main.rs (added middleware module)
- Cargo.toml (added dependencies: jsonwebtoken, pbkdf2, sha2, hmac, hex, futures, base64, rand)

--- a/Backend/Cargo.toml
+++ b/Backend/Cargo.toml
@@ -14,3 +14,13 @@ sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres"] }
 dotenv = "0.15"
 async-trait = "0.1"
 polars = { version = "0.44", features = ["lazy", "dtype-full", "diff", "abs", "rolling_window", "cum_agg"] }
+
+# Nouvelles dépendances pour l'authentification
+jsonwebtoken = "9"  #Pour générer et vérifier les JWT
+pbkdf2 = { version = "0.12", features = ["simple"] } #Pour hasher/vérifier les mots de passe au format Werkzeug
+rand = "0.8" #Pour générer le salt aléatoire
+base64 = "0.22" # Pour encoder/décoder le salt et hash
+sha2 = "0.10" #Pour PBKDF2-HMAC-SHA256
+hmac = "0.12"
+hex = "0.4"
+futures = "0.3"
