--- a/Backend/Cargo.toml
+++ b/Backend/Cargo.toml
@@ -23,5 +23,10 @@ base64 = "0.22" # Pour encoder/décoder le salt et hash
 sha2 = "0.10" #Pour PBKDF2-HMAC-SHA256
 hmac = "0.12"
 hex = "0.4"
+
+#wallet
 futures = "0.3"
 rust_decimal = "1.33"
+
+#trade
+validator = { version = "0.18", features = ["derive"] }
